syntax = "proto3";

package master.cluster.v1;

import "google/protobuf/empty.proto";

option go_package = "github.com/10Narratives/distgo-db/pkg/proto/master/cluster/v1;clusterv1";

service ClusterService {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc ListWorkers (ListWorkersRequest) returns (ListWorkersResponse);
    rpc Unregister (UnregisterRequest) returns (google.protobuf.Empty);
}

message RegisterRequest {
    string database_name = 1 ;
    string address = 2;
}

message ListWorkersRequest {}

message ListWorkersResponse {
    repeated Worker workers = 1;
}

message Worker {
    string worker_id = 1;
    string address = 2;
    string database_name = 3 ;
}

message UnregisterRequest {
    string worker_id = 1;
}

message RegisterResponse {
    string worker_id = 1;
}