syntax = "proto3";

package worker.database.v1;

option go_package = "github.com/10Narratives/distgo-db/pkg/proto/worker/database/v1;dbv1";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

service DatabaseService {
  rpc ListDocuments(ListDocumentsRequest) returns (ListDocumentsResponse);
  rpc GetDocument(GetDocumentRequest) returns (Document);
  rpc CreateDocument(CreateDocumentRequest) returns (Document);
  rpc UpdateDocument(UpdateDocumentRequest) returns (Document);
  rpc DeleteDocument(DeleteDocumentRequest) returns (google.protobuf.Empty);
}

message Document {
  string id = 1;
  google.protobuf.Struct content = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message ListDocumentsRequest {
  string collection = 1;
}

message ListDocumentsResponse {
  repeated Document documents = 1;
}

message GetDocumentRequest {
  string collection = 1;
  string document_id = 2;
}

message CreateDocumentRequest {
  string collection = 1;
  google.protobuf.Struct content = 2;
}

message UpdateDocumentRequest {
  string collection = 1;
  string document_id = 2;
  google.protobuf.FieldMask update = 3;
}

message DeleteDocumentRequest {
  string collection = 1;
  string document_id = 2;
}